Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.15-dev-5192-g6a9696f https://github.com/reactos/reactos/commit/6a9696f10b4b2de7b1d398477cd8f76bce33fe0f
Description
reactos-livecd-0.4.15-dev-5189-g2640814-x86-gcc-lin-dbg
reactos-livecd-0.4.15-dev-5190-g6a1f287-x86-msvc-win-dbg Crash
reactos-livecd-0.4.15-dev-5191-g9efa7cc-x86-msvc-win-dbg
Guilty commit : 6a1f287 or 9efa7cc by learn_more
- Open Explorer
- Open C:\
- Right click on "ReactOS" folder icon > Properties
Properties page is displayed
- Close the properties page
- Open C:\ReactOS
- Right click on the "white" folder background > Properties
Nothing happens
Expected behavior : Properties page is displayed
Note : "File > Properties" menu fails too with the same trace :
Log shows
err:(dll/win32/shell32/CDefViewBckgrndMenu.cpp:282) Got unknown command id 5l |
CDefView.cpp:1525: Unexpected failure (hr)=80004005. |
Attachments
Issue Links
- blocks
-
CORE-18827 Right-Clicking most upper-left icon on Explorer's title bar should display context menu of the folder
-
- Untriaged
-
- relates to
-
CORE-18426 Search Pane : CopyToFolder ... does not copy but opens/execute files ! (from menu, not context menu). MoveTo does nothing
-
- Resolved
-