[SHELL32] Fix context menu command ids

Fixing https://jira.reactos.org/browse/CORE-18585.

We're mainly cleaning up how CDefaultContextMenu merges menus, with some random minor fixes.

The bug itself seems to have been caused by multiple things:

- CDefView was applying an offset of -1 on the command ids; context menu implementations assume that what they return in QueryContextMenu stays the same.
- it was (to me?) not entirely obvious whether the "last" command id fields represent actual last ids or the next ids after (as per the checks, it was the latter); I renamed them to "end" to follow the STL convention of "end means a non-inclusive upper bound"
- these bounds are also always set now, even if the ranges are empty (e.g. "ids 7 to 7"); this allows the removal of some extra checks (for equality)
- it also wasn't super obvious how we were supposed to know what ids the callback in CDefaultContextMenu added (which we would then need to skip) as it doesn't really return anything; this got replaced with just giving them 48 (0x30) ids to pick from.
- there is also a minor fix in CDefView: we were using the & operator to produce a pointer to a list of children, but the ATL class implements "&" in a way where we go from holding a NULL pointer to holding something else, so in debug builds it'll fail an assertion. Now we're handing out an actual separate list.